Sensor algorithims added Dashboard view added

--- a/webroot/css/sala.css
+++ b/webroot/css/sala.css
@@ -2,7 +2,7 @@
     width: 411px;
     height: 631px;
     position: relative;
-    background: url('/senseui/img/planta.png');
+    background: url('/img/planta.png');
     margin: 0 auto;
 }
 
